--- a/src/app/components/user-input/user-input.component.css
+++ b/src/app/components/user-input/user-input.component.css
@@ -6,7 +6,7 @@
   padding: 0.5em 1em;
   justify-content: center;
   width: 100%;
-  min-width: 24rem;
+  min-width: 34rem;
 }
 
 input {
